  -- Brad's fix for ddiag.c, done properly this time (my bad!)

0.3.2

  -- for v1, still don't understand index.txt file.
  -- after testing, some more fixes, v2 downloads now work.
  -- fixes received from Brad Guillory for v2/tdz firmware downloading.
     they don't do any harm afaict, don't have a v2 to test with.
  -- added fwload directive to drobom.
  -- added root user check to give a bigger hint.

0.3.1

  -- OK I know checking for firmware updates doesn't work
     right now, but I need to find out why.  code seems correct.
     there is a bugfix for getting rid of the 'licensed' part.

  -- fixes for firmware validation:
       -- header CRC on 32bit was broken on 64bit.
       -- 32 vs. 64 bit kludge needed.

0.3.0
  -- added ability to format Drobo
  -- added ability to set lun sizes
  -- bugfix for firmware:
        -- CRC32 on 32bit intel. (use signed, instead of unsigned.)
        -- fixed header CRC not validating.
  -- added ability to set time on Drobo.
  -- added simulation mode to Drobo.py, development aid.
  -- some work done towards lunsize setting, but incomplete.
  -- some work towards indicating relay out progress, not tested...

0.2.2 Released August 2008
  -- firmware uploads work with .tdz as well
  -- tested with older firmwares, contains a few fixes to improve compatibility.
     works well enought upgrade old firmwares.

0.2.1 Released July 2008
      uploaded to drobospace & sourceforge.
  -- firmware upload works for .tdf's 
     
0.1.1 Initial version uploaded  april 2008
       to drobospace.com and sf.net
  -- confirmed to work with firmware 1.1.1
  -- shows status, disk slots filled, model, etc..
  -- shows fw version loaded.
  -- blink & standby commands work.